# Clinical-AI-Agent-MCP-Server

./: app.py  main.py  mcp_tool.py  pyproject.toml  requirements.txt
functions/: diagnosis_symptoms.py  summarize_pubmed.py  symptom_extractor.py
