[project]
name = "clinical-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "lxml>=6.0.2",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
